# opassit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  这个项目计划是使用python 语言为主来构建的协助企业运营和自动化工作的一个网.ini
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
apps/audit/: admin.py  models.py
apps/automation/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/core/: __init__.py  admin.py  apps.py  middleware.py  models.py  urls.py  views.py
apps/organizations/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
designdoc/: 网站设计需求.md
docs/: ARCHITECTURE_OPTIONS.md  WORKFLOW_APPROVAL_RECOMMENDATIONS.md
scripts/: backup_db.sh  reset_admin.sh  setup_env.ps1  setup_env.sh  setup_opassit_db.sh
templates/: base.html  base_backend.html
templates/accounts/: role_confirm_delete.html  role_form.html  role_list.html  uor_confirm_delete.html  uor_form.html  uor_list.html  user_confirm_delete.html  user_confirm_permanent_delete.html  user_deleted.html  user_form.html  user_list.html
templates/automation/: task_assign_build_list.html  task_board.html  task_build_acceptance_list.html  task_confirm_delete.html  task_confirm_permanent_delete.html  task_deleted.html  task_executable_list.html  task_execution_history.html  task_form.html  task_list.html  task_pending.html  task_preview.html
templates/core/: dashboard.html  login.html  (+1 more)
(+26 files in other folders)
